<resources>
    <string name="app_name">mobile_auth</string>
    <string name="enter_login">enter_login</string>
    <string name="enter_password">enter_password</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="enter_your_post_content">enter your post content</string>
    <string name="create_new_post">Create new Post</string>
    <string name="create">Create</string>
    <string name="date">22 янв. 2021г.</string>
    <string name="author">Author</string>
    <string name="post">Post</string>
    <string name="location">Location</string>
</resources>